--- a/backend/auth_service/requirements.txt
+++ b/backend/auth_service/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.8.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
 Django==5.0.6
 django-environ==0.11.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+idna==3.7
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 sqlparse==0.5.0
+urllib3==2.2.1
+requests==2.31.0
