--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
 
         location / {
             root /var/www/transcendence;
-            index index.html index.htm;
+            index index.html;
         }
     }
 
@@ -20,7 +20,7 @@ http {
 
         location / {
             root /var/www/transcendence;
-            index index.html index.htm;
+            index index.html;
         }
     }
 }
