--- a/compose.yml
+++ b/compose.yml
@@ -5,15 +5,15 @@ networks:
 
 
 services:
-  db:
+  auth_db:
     image: postgres:13
-    container_name: postgreSQL
+    container_name: auth_db
     env_file:
-      - .env
+      - .env.auth
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - auth_postgres_data:/var/lib/postgresql/data
     networks:
       - transcendence
 
@@ -24,30 +24,52 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - .env
+      - .env.auth
     depends_on:
-      - db
+      - auth_db
     networks:
       - transcendence
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "443:443"
-      - "80:80"
+  game_db:
+    image: postgres:13
+    container_name: game_db
     env_file:
-      - .env
+      - .env.game
+    ports:
+      - "5433:5432"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl/:ro
-      - ./frontend:/var/www/transcendence:ro
+      - game_postgres_data:/var/lib/postgresql/data
     networks:
       - transcendence
-    
+
+  game_service:
+    build: ./backend/game_service
+    container_name: game_service
+    image: game_service
+    ports:
+      - "8001:8001"
+    env_file:
+      - .env.game
+    depends_on:
+      - game_db
+    networks:
+      - transcendence
+
+#  nginx:
+#    image: nginx:latest
+#    container_name: nginx
+#    ports:
+#      - "443:443"
+#      - "80:80"
+#    env_file:
+#      - .env
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+#      - ./nginx/ssl:/etc/nginx/ssl/:ro
+#      - ./frontend:/var/www/transcendence:ro
+#    networks:
+#      - transcendence
 
 volumes:
-  postgres_data:
-
-# docker exec -it auth_service python manage.py migrate
-# docker exec -it postgreSQL psql -U admin -d transcendence 
+  auth_postgres_data:
+  game_postgres_data:
