--- a/compose.yml
+++ b/compose.yml
@@ -9,7 +9,7 @@ services:
     image: postgres:13
     container_name: auth_db
     env_file:
-      - .env.auth
+      - .env
     ports:
       - "5432:5432"
     volumes:
@@ -24,7 +24,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - .env.auth
+      - .env
     depends_on:
       - auth_db
     networks:
