--- a/backend/game_service/requirements.txt
+++ b/backend/game_service/requirements.txt
@@ -6,6 +6,7 @@ bcrypt==4.1.3
 certifi==2024.6.2
 cffi==1.16.0
 channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==42.0.8
@@ -18,6 +19,7 @@ djangorestframework==3.15.2
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
+msgpack==1.1.0
 packaging==24.1
 pipdeptree==2.23.0
 psycopg2-binary==2.9.9
@@ -25,6 +27,7 @@ pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 pyOpenSSL==24.1.0
+redis==5.2.0
 requests==2.32.3
 service-identity==24.1.0
 setuptools==70.1.0
