--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,10 @@ http {
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
         location / {
+            expires 0;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
             root /var/www/transcendence;
             index index.html;
         }
