--- a/backend/auth_service/requirements.txt
+++ b/backend/auth_service/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
 Django==5.0.6
+django-cors-headers==4.6.0
 django-environ==0.11.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
