--- a/backend/mfa_service/requirements.txt
+++ b/backend/mfa_service/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.0
 Django==5.1.3
 djangorestframework==3.15.2
 idna==3.10
+pillow==11.0.0
 psycopg2-binary==2.9.9
 pyotp==2.9.0
 qrcode==8.0
