--- a/backend/mfa_service/requirements.txt
+++ b/backend/mfa_service/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework==3.15.2
 idna==3.10
 pillow==11.0.0
 psycopg2-binary==2.9.9
+PyJWT==2.10.0
 pyotp==2.9.0
 qrcode==8.0
 requests==2.32.3
