--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost 127.0.0.1;
 
         location / {
             root /var/www/transcendence;
@@ -16,7 +16,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name localhost;
+        server_name localhost 127.0.0.1;
 
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
