--- a/backend/game_service/requirements.txt
+++ b/backend/game_service/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.8.1
 certifi==2024.6.2
+charset-normalizer==3.4.0
 Django==5.0.6
 django-cors-headers==4.6.0
 django-environ==0.11.2
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+idna==3.10
 psycopg2-binary==2.9.9
-sqlparse==0.5.0
-urllib3==2.2.1
 PyJWT==2.8.0
 requests==2.31.0
+sqlparse==0.5.0
+urllib3==2.2.1
