--- a/backend/auth_service/Dockerfile
+++ b/backend/auth_service/Dockerfile
@@ -1,10 +1,12 @@
 FROM python:3.11-slim
-
+ENV PYTHONUNBUFFERED=1
 WORKDIR /code
 
 COPY requirements.txt /code/
+COPY ./tools/entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 COPY . /code/
-CMD [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
+CMD ["/bin/sh", "/usr/local/bin/entrypoint.sh"]
