--- a/compose.yml
+++ b/compose.yml
@@ -69,30 +69,30 @@ services:
     networks:
       - transcendence
 
-  game_db:
-    image: postgres:13
-    container_name: game_db
-    env_file:
-      - .env.game
-    ports:
-      - "5433:5432"
-    volumes:
-      - game_postgres_data:/var/lib/postgresql/data
-    networks:
-      - transcendence
+#  game_db:
+#    image: postgres:13
+#    container_name: game_db
+#    env_file:
+#      - .env.game
+#    ports:
+#      - "5434:5432"
+#    volumes:
+#      - game_postgres_data:/var/lib/postgresql/data
+#    networks:
+#      - transcendence
 
-  gameservice:
-    build: ./backend/game_service
-    container_name: gameservice
-    image: gameservice
-    ports:
-      - "8001:8001"
-    env_file:
-      - .env.game
-    depends_on:
-      - game_db
-    networks:
-      - transcendence
+#  gameservice:
+#    build: ./backend/game_service
+#    container_name: gameservice
+#    image: gameservice
+#    ports:
+#      - "8002:8002"
+#    env_file:
+#      - .env.game
+#    depends_on:
+#      - game_db
+#    networks:
+#      - transcendence
 
   nginx:
     image: nginx:latest
@@ -109,5 +109,5 @@ services:
 
 volumes:
   auth_postgres_data:
-  game_postgres_data:
+#  game_postgres_data:
   mfa_postgres_data:
