updated nginx config to allow cookies

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,6 +28,10 @@ http {
             add_header Expires "0";
             root /var/www/transcendence;
             index index.html;
+
+            # Allow credentials (cookies)
+            add_header Access-Control-Allow-Origin "http://127.0.0.1";
+            add_header Access-Control-Allow-Credentials "true";
         }
     }
 }
