Updated nginx config to always serve index.html

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,17 +17,20 @@ http {
     server {
         listen 443 ssl;
         server_name localhost 127.0.0.1;
+        index index.html;
+        root /var/www/transcendence;
 
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
+        error_page 404 /index.html;
         location / {
+            try_files $uri /index.html;
+
             expires 0;
             add_header Cache-Control "no-cache, no-store, must-revalidate";
             add_header Pragma "no-cache";
             add_header Expires "0";
-            root /var/www/transcendence;
-            index index.html;
 
             # Allow credentials (cookies)
             add_header Access-Control-Allow-Origin "http://127.0.0.1";
