udpated Dockerfile to use entryscript.sh

--- a/backend/auth_service/Dockerfile
+++ b/backend/auth_service/Dockerfile
@@ -3,10 +3,10 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /code
 
 COPY requirements.txt /code/
-COPY ./tools/entrypoint.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
+COPY ./tools/entryscript.sh /usr/local/bin/entryscript.sh
+RUN chmod +x /usr/local/bin/entryscript.sh
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 COPY . /code/
-CMD ["/bin/sh", "/usr/local/bin/entrypoint.sh"]
+CMD ["/bin/sh", "/usr/local/bin/entryscript.sh"]
