re added ports because it didn't work earlier

--- a/compose.yml
+++ b/compose.yml
@@ -33,6 +33,8 @@ services:
     restart: always
     env_file:
       - .env
+    ports:
+      - "8000:8000"
     depends_on:
       authdb:
         condition: service_healthy
@@ -72,6 +74,8 @@ services:
         condition: service_healthy
     env_file:
       - .env
+    ports:
+      - "8001:8001"
     networks:
       - transcendence
 
@@ -107,6 +111,8 @@ services:
     depends_on:
       jwtdb:
         condition: service_healthy
+    ports:
+      - "8002:8002"
     networks:
       - transcendence
 
@@ -142,6 +148,8 @@ services:
     depends_on:
       gamedb:
         condition: service_healthy
+    ports:
+      - "8003:8003"
     networks:
       - transcendence
 
