Fixed paddle issues on paddle moues tracking on dashboard

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ http {
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
-        error_page 404 /index.html;
+        # error_page 404 /index.html;
         location / {
             try_files $uri /index.html;
 
