--- a/backend/mfa_service/requirements.txt
+++ b/backend/mfa_service/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.3
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 idna==3.10
 pillow==11.0.0
