removed localhost from nginx server name

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost 127.0.0.1;
+        server_name 127.0.0.1;
 
         location / {
             root /var/www/transcendence;
@@ -16,14 +16,13 @@ http {
 
     server {
         listen 443 ssl;
-        server_name localhost 127.0.0.1;
+        server_name 127.0.0.1;
         index index.html;
         root /var/www/transcendence;
 
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
-        # error_page 404 /index.html;
         location / {
             try_files $uri /index.html;
 
