Fixed nginx redirecting to 404, my custom router handles it now

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,10 +7,25 @@ http {
     server {
         listen 80;
         server_name 127.0.0.1;
+        index index.html;
+        root /var/www/transcendence;
 
-        location / {
+        error_page 404 /index.html;
+        location = /index.html {
             root /var/www/transcendence;
-            index index.html;
+            internal;
+        }
+        location / {
+            try_files $uri /index.html;
+
+            expires 0;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+
+            # Allow credentials (cookies)
+            add_header Access-Control-Allow-Origin "http://127.0.0.1";
+            add_header Access-Control-Allow-Credentials "true";
         }
     }
 
@@ -23,6 +38,11 @@ http {
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
+        error_page 404 /index.html;
+        location = /index.html {
+            root /var/www/transcendence;
+            internal;
+        }
         location / {
             try_files $uri /index.html;
 
