--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,10 +7,40 @@ http {
     server {
         listen 80;
         server_name 127.0.0.1;
+        index index.html;
+        root /var/www/transcendence;
+
+        error_page 404 /index.html;
+        location = /index.html {
+            root /var/www/transcendence;
+            internal;
+        }
+
+        location /scripts/ {
+            root /var/www/transcendence;
+            add_header Content-Type application/javascript;
+        }
+
+        location /styles/ {
+            root /var/www/transcendence;
+            add_header Content-Type text/css;
+        }
+
+        location /callback/ {
+            try_files $uri $uri/ /index.html;
+        }
 
         location / {
-            root /var/www/transcendence;
-            index index.html;
+            try_files $uri $uri/ /index.html;
+
+            expires 0;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+
+            # Allow credentials (cookies)
+            add_header Access-Control-Allow-Origin "http://127.0.0.1";
+            add_header Access-Control-Allow-Credentials "true";
         }
     }
 
@@ -23,6 +53,11 @@ http {
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
+        error_page 404 /index.html;
+        location = /index.html {
+            root /var/www/transcendence;
+            internal;
+        }
         location / {
             try_files $uri /index.html;
 
