--- a/compose.yml
+++ b/compose.yml
@@ -172,6 +172,7 @@ services:
     container_name: prometheus
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus/alert_rules.yml:/etc/prometheus/alert_rules.yml:ro
       - ./prometheus/prometheus-data:/prometheus
     ports:
       - "9090:9090"
