--- a/backend/friends_service/requirements.txt
+++ b/backend/friends_service/requirements.txt
@@ -5,8 +5,9 @@ Django==5.1.3
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
 idna==3.10
-psycopg2-binary==2.9.9
 PyJWT==2.10.0
 requests==2.32.3
 sqlparse==0.5.2
 urllib3==2.2.3
+pillow==11.0.0
+psycopg2-binary==2.9.9
