bug fix with to use https connection

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -67,7 +67,7 @@ http {
             add_header Expires "0";
 
             # Allow credentials (cookies)
-            add_header Access-Control-Allow-Origin "http://127.0.0.1";
+            add_header Access-Control-Allow-Origin "https://127.0.0.1";
             add_header Access-Control-Allow-Credentials "true";
         }
     }
